<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/patientRequestsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PATIENTS REQUESTS"
        android:textSize="34dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
       android:background="@color/purple_500"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/filterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Filter"
        android:background="@drawable/custom_spinner_background"
        android:layout_margin="16dp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerView"
        android:paddingTop="20dp"/>

</LinearLayout>
